modified color theme and font

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link id="theme" rel="stylesheet" href=" ">
 </head>
 
@@ -27,9 +30,9 @@
                 <div class="wrapper">
                     
                     <div class="content">
-                        <img loading="lazy" class="about-img" src="images/pakhi.jpg" alt="">
+                        <img loading="lazy" class="about-img" src="images/pakhi.jpeg" alt="">
                         <p class="about-para">
-                            Myself Pakhi Rathod. I am 13 years old. I live in Thane, Maharashtra.My hobbies are arts, gymnastics, dance and badminton. I am pretty good in drawing and I am intrested in making my career in that. I like to code too. I would like to mention the languages I have learnt in code - html and python.
+                            Hey there! I'm Pakhi Rathod, a 13-year-old from Thane, Maharashtra. 🌟 When I'm not busy with arts, gymnastics, dance, or badminton, you'll find me doodling away—I'm pretty good at it! 💫 And guess what? Coding is my jam too! I've dipped my toes into HTML and Python. Let's see where this creative journey takes me! 🚀
                         </p>
                     </div>
                 </div>
